# ROS-CATEC

./: .gitignore  .gitmodules  PatrollingCV.sln  PatrollingCV.vcxproj  README.txt  clean  make_package  makefile
CATEC_dataTypes/catec_actions_msgs/: .project  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
CATEC_dataTypes/catec_msgs/: .cproject  .project  .pydevproject
CATEC_dataTypes/catec_srvs/: manifest.xml
CATEC_uav/: CMakeLists.txt  manifest.xml
CATEC_uav/Media/models/scenario5/: scene.sdf  testbedTrakingLona.dae
CATEC_uav/launch/: catec_qnx.launch  config_vehicles.launch  config_vehicles_qnx.launch  simulation_catec.launch
CATEC_uav/models/: quadrotor_nog_camera.model  quadrotor_nog_camera_laser.model  quadrotor_nog_green.model  quadrotor_nog_purple.model  quadrotor_nog_red.model  quadrotor_nog_yellow.model
CATEC_uav/world/: testbed_catec.world
CATEC_ugv/: CMakeLists.txt  README.txt  manifest.xml
CATEC_ugv/Media/materials/scripts/: CATEC.material
CATEC_ugv/Media/models/cars/Golf/: golf.dae  golf_blue.dae  golf_green.dae  golf_yellow.dae
CATEC_ugv/Media/models/cars/Lincoln/: lincoln.dae  lincoln_chasis.dae  lincoln_exterior_d.tga  lincoln_exterior_d_blue.tga  lincoln_exterior_s.tga  wheelBL.dae  wheelBR.dae  wheelCentered.dae  wheelFL.dae  wheelFR.dae
CATEC_ugv/Media/models/cars/Mini_cooper/: wheelBL.dae  wheelBR.dae  wheelCentered.dae  wheelFL.dae  wheelFR.dae  wheels.dae
CATEC_ugv/config/: safemobil.vcg  track0.txt  track1.txt  track2.txt  track3.txt  track4.txt  track5.txt  track6.txt  track7.txt
CATEC_ugv/launch/: UGVs_AL.launch  UGVs_AL_qnx.launch  guided.launch  spawn_car.launch
CATEC_ugv/models/: audi.model  lincoln.model
CATEC_ugv/src/: car_controller_sfun.mexa64  ugv_qnx_lineTracker.cpp
CATEC_ugv/src/car_controller_ert_rtw/: buildInfo.mat  build_exception.mat  car_controller.c  car_controller.mk  car_controller_data.c  car_controller_targ_data_map.m  codeInfo.mat  defines.txt  modelsources.txt  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c  rtw_proj.tmw  rtwtypeschksum.mat
CATEC_ugv/src/link/: qnx_lineTracker.cpp
CATEC_ugv/src/slprj/_sfprj/car_controller/_self/rtw/ert/info/: binfo.mat
CATEC_ugv/src/slprj/_sfprj/car_controller/_self/rtw/ert/src/: c1_car_controller.tlc
CATEC_ugv/src/slprj/_sfprj/car_controller/_self/sfun/info/: binfo.mat  chart1_d1XM28USiBilrY5F55Fv0C.mat
CATEC_ugv/src/slprj/_sfprj/car_controller/_self/sfun/src/: c1_car_controller.c  car_controller_sfun.c  car_controller_sfun.mku  car_controller_sfun.mol  car_controller_sfun_registry.c  rtwtypeschksum.mat
CATEC_ugv/src/slprj/ert/_sharedutils/: shared_file.dmr  tflSUInfo.mat
CATEC_ugv/src/slprj/ert/car_controller/tmwinternal/: binfo.mat  minfo.mat
CATEC_ugv/urdf/: car_base_golf.urdf.xacro  car_base_golf_blue.urdf.xacro  car_base_golf_green.urdf.xacro  car_base_golf_yellow.urdf.xacro  car_base_lincoln.urdf.xacro  car_base_mini.urdf.xacro  car_golf.urdf.xacro  car_golf_blue.urdf.xacro  car_golf_green.urdf.xacro  car_golf_yellow.urdf.xacro  car_lincoln.urdf.xacro  car_mini.urdf.xacro
ackermann_gazebo_plugin/src/: ackermann_plugin.cpp
arbitrer/: .cproject  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox
arbitrer/src/: arbitrer.cpp  tester.cpp
art_msgs/: mainpage.dox  manifest.xml
art_msgs/msg/: CarDrive.msg  CarDriveStamped.msg
c-ommand_dispatcher_new/: .cproject  .project  cmake_install.cmake  mainpage.dox
c-ommand_dispatcher_new/src/: cmd_dispatcher.cpp  prueba (copy).cpp  prueba.cpp  prueba2.cpp  (+5 more)
command_dispatcher/: .cproject  .project  CMakeLists.txt  CMakeLists2.txt  command_dispatcher.vcxproj  command_dispatcher.vcxproj.filters  manifest.xml
command_dispatcher/launch/: agent_ids  gazebo2quads.launch  gazebo4quads.launch  intruder_ids  patrolling_and_tracking.launch  prueba_2.launch  uavHs  uavIds  uavIntruderId
command_dispatcher/src/: UavCatecRos.cpp  UavCatecRos.h  cmd_dispatcher.cpp  cmd_dispatcher_file.cpp  patrolling_and_tracking.cpp  prueba2.cpp  quad.cpp  quad.h  strings_tools.h
command_dispatcher/src/command_dispatcher/srv/: __init__.py  _servicio_nuevo.py
command_dispatcher/src/core/agents/: RosAgent.cpp  RosAgent.h
command_dispatcher/waypoints/: way2.conf  way6.conf
command_dispatcher/world/: testbed_2.world  testbed_4.world
command_uav/: .cproject  .project  CMakeLists.txt  command_uav.vcxproj
gamepad_control_pengui/: CMakeLists.txt  gamepad_control_pengui.vcxproj  manifest.xml
gamepad_control_pengui/launch/: gamepad.launch  scenario.launch
gamepad_control_pengui/src/: gamepad_control_node.cpp  gamepad_control_vector_node.cpp  gamepad_control_vector_node_u.cpp
gamepad_control_pengui/src/joystick/: joystick.cpp
matlab/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
navigation_samples/: .cproject  cmake_install.cmake  navigation_samples.vcxproj
navigation_samples_new/: .project  .pydevproject  mainpage.dox
path_follower/: .cproject  .project  .pydevproject  CMakeLists.txt  mainpage.dox  path_follower.vcxproj
path_planner/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml  path_planner.vcxproj
qtester/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
teleop/: .cproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
teleop/src/: send_WayPointWithCruiseStamped.cpp  takeoff_land.cpp
teleop/src/takeoff_land/: actions.cpp  actions.h  string_tools.cpp  strings_tools.h
temporal_wpa/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
uav/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  qnx_real.cpp  uav.vcxproj
uav_vision/: CMakeLists.txt  manifest.xml  uav_vision.vcxproj  uav_vision.vcxproj.filters
uav_vision/src/: ImageCatcher.h  UavCatecRos.cpp  UavCatecRos.h
uav_vision/src/vision/: ColorClustering.h  ColorSpaceHSV8.cpp  ColorSpaceHSV8.h  SegmentedRLEObject.cpp  SegmentedRLEObject.h
workspace_catec/: .gitignore  make_all
(+414 files in other folders)
